--- a/src/components/NotFoundBlock/NotFoundBlock.module.scss
+++ b/src/components/NotFoundBlock/NotFoundBlock.module.scss
@@ -1,3 +1,14 @@
 .root {
+  text-align: center;
+  padding: 100px;
+  max-width: 750px;
+  margin: 0 auto;
 
+  span {
+    font-size: 64px;
+  }
+}
+
+.description {
+  font-size: 18px;
 }
