add adaptive scss styles for different screens

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,8 @@
 $black: #232323;
 $background: #ff998c;
+$background: linear-gradient(to bottom, #ffa79d, #e0614c) ;
 $gray-line: #f6f6f6;
-$orange: #fe5f1e;
+$red: #ff5e5e;
 
 $container-width: 90%;
 
