--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -3,7 +3,7 @@
 @import 'components/all';
 
 body {
-  background-color: $background;
+  background: $background;
 }
 
 .wrapper {
@@ -13,25 +13,80 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+
+  @media (max-width: 645px) {
+    width: calc(100vw - 20px);
+  }
+
 }
 
 .content {
   padding: 40px 0;
 
+  @media (max-width: 645px) {
+    padding: 0;
+  }
+
   &__title {
-    margin: 35px 0;
+    font-size: 38px;
+    font-weight: 800;
+    margin-bottom: 35px;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
   }
 
   &__top {
     display: flex;
+    margin-bottom: 35px;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 1070px) {
+      flex-direction: column;
+      .categories {
+        margin-bottom: 30px;
+        overflow: scroll;
+
+        ul {
+          max-width: 785px
+        }
+      }
+    }
+
+    @media (max-width: 860px) {
+      .categories {
+        width: 100%;
+      }
+    }
+
+    @media (max-width: 760px) {
+      .categories {
+        ul {
+          li {
+            padding: 8px 20px;
+          }
+        }
+      }
+    }
+
   }
 }
 
@@ -42,6 +97,7 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+
     .content__title {
       margin: 0;
     }
@@ -55,6 +111,10 @@ body {
     align-items: center;
   }
 
+  .content__items {
+    display: block;
+  }
+
   .content__title {
     display: flex;
     align-items: center;
@@ -66,6 +126,7 @@ body {
       width: 30px;
       height: 30px;
       margin-right: 10px;
+
       path {
         stroke: $black;
         stroke-width: 1.9;
@@ -98,6 +159,7 @@ body {
           stroke: darken($color: #b6b6b6, $amount: 50);
         }
       }
+
       span {
         color: darken($color: #b6b6b6, $amount: 50);
       }
@@ -198,6 +260,7 @@ body {
           height: 11.5px;
           position: relative;
         }
+
         &:hover,
         &:active {
           border-color: darken($color: $gray-line, $amount: 80);
@@ -219,7 +282,7 @@ body {
 
         &:last-of-type {
           b {
-            color: $orange;
+            color: $red;
           }
         }
       }
@@ -241,7 +304,6 @@ body {
         span {
           color: darken($color: $gray-line, $amount: 20);
           font-weight: 500;
-          font-weight: 600;
         }
 
         &:hover {
@@ -255,6 +317,7 @@ body {
 
         svg {
           margin-right: 12px;
+
           path {
             fill: transparent;
             stroke-width: 2;
