--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -5,8 +5,10 @@
   text-align: center;
   margin-bottom: 65px;
 
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
+  &-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__image {
@@ -16,7 +18,6 @@
   &__title {
     font-size: 20px;
     font-weight: 900;
-    letter-spacing: 1%;
     margin-bottom: 20px;
   }
 
