--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -129,7 +129,7 @@ body {
 
       path {
         stroke: $black;
-        stroke-width: 1.9;
+        strokeWidth: 1.9;
       }
     }
   }
@@ -320,7 +320,7 @@ body {
 
           path {
             fill: transparent;
-            stroke-width: 2;
+            strokeWidth: 2;
           }
         }
       }
