--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -320,7 +320,7 @@ body {
 
           path {
             fill: transparent;
-            strokeWidth: 2;
+            stroke-width: 2;
           }
         }
       }
@@ -351,7 +351,7 @@ body {
       color: #777777;
     }
 
-    icon {
+    .icon {
       position: relative;
       top: 2px;
     }
